--- a/BoostCamp1/app/src/main/res/layout/newsfeed_poster_item.xml
+++ b/BoostCamp1/app/src/main/res/layout/newsfeed_poster_item.xml
@@ -67,7 +67,10 @@
         <ImageView
             android:id="@+id/imageView_postImg"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:scaleType="centerInside"
+            android:adjustViewBounds="true"/>
+
     </LinearLayout>
 
     <RelativeLayout
