--- a/BoostCamp1/app/src/main/res/layout/fragment_default_tab.xml
+++ b/BoostCamp1/app/src/main/res/layout/fragment_default_tab.xml
@@ -6,7 +6,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="frineds"
+        android:text="default fragment"
         android:textColor="#FFF"/>
-
 </LinearLayout>
