--- a/BoostCamp1/app/src/main/res/layout/newsfeed_poster_newpost.xml
+++ b/BoostCamp1/app/src/main/res/layout/newsfeed_poster_newpost.xml
@@ -3,6 +3,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="50dp"
+    android:layout_marginTop="10dp"
     android:background="#FFF">
 
     <LinearLayout
