--- a/FirebaseExample/app/src/main/res/layout/activity_main.xml
+++ b/FirebaseExample/app/src/main/res/layout/activity_main.xml
@@ -1,59 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.example.suno.firebaseexample.MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-        <Button
-            android:id="@+id/btn_firebase_database"
-            android:layout_width="160dp"
-            android:layout_height="40dp"
-            android:text="RealTime DB"
-            android:layout_gravity="center_vertical" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-        <Button
-            android:id="@+id/btn_firebase_authentification"
-            android:layout_width="160dp"
-            android:layout_height="40dp"
-            android:text="Authentification"
-            android:layout_gravity="center_vertical" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/btn_firebase_fcm"
-            android:layout_width="160dp"
-            android:layout_height="40dp"
-            android:text="FCM push"
-            android:layout_gravity="center_vertical|center_horizontal" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-        <Button
-            android:id="@+id/btn_firebase_error"
-            android:layout_width="160dp"
-            android:layout_height="40dp"
-            android:text="Error Report"
-            android:layout_gravity="center_vertical" />
-    </LinearLayout>
-
-</LinearLayout>
+    <Button
+        android:id="@+id/btn_firebase_database"
+        android:layout_width="160dp"
+        android:layout_height="40dp"
+        android:text="RealTime DB"
+        android:layout_marginTop="146dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+    <Button
+        android:id="@+id/btn_firebase_authentification"
+        android:layout_width="160dp"
+        android:layout_height="40dp"
+        android:text="Authentification"
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/btn_firebase_database" />
+</RelativeLayout>
